2019-01-10  Andrew Sutton  <andrew.n.sutton@gmail.com>

	Add error diagnostics.
	* g++dg/concepts/generic-fn-err.C: Add diagnostics for invalid cases.

2019-01-10  Andrew Sutton  <andrew.n.sutton@gmail.com>

	Update introduction tests.
	* g++dg/concepts/intro4.C: Update diagnostics to match newer template 
	introduction implementation.
	* g++dg/concepts/intro5.C: Add error for disallowed deduction of
	defaulted template parameters.

2019-01-10  Andrew Sutton  <andrew.n.sutton@gmail.com>

	Update tests.
	* g++dg/concepts/expression2.C: Add error about private member. This
	is emitted during diagnostics; fix typos.

2019-01-10  Andrew Sutton  <andrew.n.sutton@gmail.com>

	Update tests.
	* g++.dg/concepts/equiv.C: Change compile test to link test.
	* g++.dg/concepts/equiv2.C: Change run test to link test; update
	examples to match the independent binding rule.

2019-01-10  Andrew Sutton  <andrew.n.sutton@gmail.com>

	Update diagnostics.
	* g++.dg/concepts/dr1430.C: Update diagnostics.

2019-01-10  Andrew Sutton  <andrew.n.sutton@gmail.com>

	Update diagnostics and build errors.
	* g++.dg/concepts/decl-diagnose.C: Update diagnostics.

2018-12-18  Andrew Sutton  <andrew.n.sutton@gmail.com>

	Clean up handling of different kinds of concepts.
	* g++.dg/cpp2a/concepts-requires16.C: Update diagnostics.

2018-12-17  Andrew Sutton  <andrew.n.sutton@gmail.com>

	Fixing accidentally propagated merge conflicts.
	* g++.dg/cpp2a/concepts-friend1.C: Resolve merge conflicts.
	* g++.dg/cpp2a/concepts-friend2.C: Likewise.
	* g++.dg/cpp2a/concepts-iconv1.C: Likewise.
	* g++.dg/cpp2a/concepts-inherit-ctor2.C: Likewise.
	* g++.dg/cpp2a/concepts-inherit-ctor4.C: Likewise.
	* g++.dg/cpp2a/concepts-memfun-err.C: Likewise.
	* g++.dg/cpp2a/concepts-memfun.C: Likewise.
	* g++.dg/cpp2a/concepts-partial-spec4.C: Likewise.
	* g++.dg/cpp2a/concepts-partial-spec6.C: Likewise.
	* g++.dg/cpp2a/concepts-placeholder1.C: Likewise.
	* g++.dg/cpp2a/concepts-pr65552.C: Likewise.