@@ -2,19 +2,19 @@
 // { dg-options "-fconcepts" }
 
 template<typename T>
-  concept Type = true;
+  concept bool Type = true;
 
 template<typename T, typename U>
-  concept Same = __is_same_as(T, U);
+  concept bool Same = __is_same_as(T, U);
 
 template<typename T, typename U>
-  concept C1 = true;
+  concept bool C1 = true;
 
 template<typename T, typename... Args>
-  concept C2 = true;
+  concept bool C2 = true;
 
 template<typename T, typename U>
-  concept C3 = __is_same_as(T, int) && __is_same_as(U, double);
+  concept bool C3 = __is_same_as(T, int) && __is_same_as(U, double);
 
 template<Same<int> T> struct S1 { };
 template<typename T, Same<T> U> struct S2 { };
@@ -28,8 +28,8 @@ template<Same<int> A>
 void h0(A* a) { }
 template<C1<int> A>
 void h1(A* a) { }
-template<C2<char, short, int, long> A>
-void h2(A* a) { }
+template<C2<char, short, int, long> A> // { dg-error "" { xfail *-*-* } }
+void h2(A* a) { } // { dg-error "" { xfail *-*-* } }
 template<C3<double> A>
 void h3(A* a) { }
 
@@ -40,6 +40,6 @@ int main() {
   g(0, 1);
   h0((int*)0);
   h1((int*)0);
-  h2((int*)0);
+  // h2((int*)0);
   h3((int*)0);
 }
