@@ -1,9 +1,15 @@
-2019-01-10  Andrew Sutton  <andrew.n.sutton@gmail.com>
+2019-01-11  Andrew Sutton  <andrew.n.sutton@gmail.com>
+
+	Make tests not fail.
+	* g++dg/concepts/generic-fn-err.C: XFail tests related to placeholders
+	using variadic concepts.
+
+2019-01-11  Andrew Sutton  <andrew.n.sutton@gmail.com>
 
 	Add error diagnostics.
 	* g++dg/concepts/generic-fn-err.C: Add diagnostics for invalid cases.
 
-2019-01-10  Andrew Sutton  <andrew.n.sutton@gmail.com>
+2019-01-11  Andrew Sutton  <andrew.n.sutton@gmail.com>
 
 	Update introduction tests.
 	* g++dg/concepts/intro4.C: Update diagnostics to match newer template 
